# FITOM_X

./: .gitmodules  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/fitom_cli/: CMakeLists.txt  main.cpp
apps/fitom_gui/: CMakeLists.txt  ChSettingsDialog.cpp  ChSettingsDialog.h  LevelMeterPanel.cpp  LevelMeterPanel.h  MidiPortSettingsDialog.cpp  MidiPortSettingsDialog.h  PatchPickerDialog.cpp  PatchPickerDialog.h  RegisterDumpWindow.cpp  RegisterDumpWindow.h  SystemSettingsDialog.cpp  SystemSettingsDialog.h  main.cpp
backends/fm_engine/: CMakeLists.txt
backends/hw_if/: CMakeLists.txt
backends/midi_alsa/: CMakeLists.txt
backends/midi_alsa/src/: MidiALSA.cpp
backends/midi_pipe/: CMakeLists.txt
backends/midi_pipe/src/: MidiPipe.cpp
backends/midi_rtmidi/: CMakeLists.txt
backends/midi_rtmidi/src/: MidiRtMidi.cpp
backends/midi_winmm/: CMakeLists.txt
backends/midi_winmm/src/: MidiWinMM.cpp
backends/midi_wms/: CMakeLists.txt
backends/midi_wms/src/: MidiWMS.cpp
banks/OPL3/alsa/: std_opl3.hwbank.json
banks/OPL3/ma2_vma/: GMmapFM4op.hwbank.json  Preset4OP.hwbank.json
banks/drums/OPL3/: alsa_drums.hwbank.json
banks/sw/: default_32.swbank.json  default_gm.swbank.json
config/: fitom.conf.json
config/profiles/: emulator_only.profile.json  emulator_opn_family.profile.json  fitom_hw_profile.example.json  fmhwif_profile.example.json  opl4awm.drumkit.json  opl4awm_drum_patchbank.patchbank.json  opnAdpcm.drumkit.json  preset_opl.profile.json  preset_opm.profile.json  preset_opn.profile.json  studio.profile.json
config_schema/: drumbank.schema.json  drumkit.schema.json  fitom.conf.schema.json  hwbank.schema.json  patchbank.schema.json  profile.schema.json
core/: CMakeLists.txt
core/include/fitom/: AudioEngine.h  CFITOM.h  Config.h  DeviceFactory.h  DrumData.h  FITOM.h  FITOMdefine.h  FmEnginePort.h  Fnum.h  FnumUtils.h  HWPort.h  IPort.h  ISoundDevice.h  Log.h  MIDI.h  MidiCh.h  MidiManager.h  MultiDevice.h  PatchData.h  PatchManager.h  PcmBankData.h  PluginLoader.h  SccWaveData.h  VoiceData.h  VoiceProcessor.h  VolumeUtils.h  fitom_core.h
core/src/: ADPCM.cpp  ADPCM_new.cpp  AudioEngine.cpp  CFITOM.cpp  Config.cpp  DSG.cpp  DeviceFactory.cpp  EPSG.cpp  FITOMCfg.cpp  FITOMCfg.h  FmEnginePort.cpp  Fnum.cpp  Fnum.h  HWPort.cpp  IPort.cpp  Log.cpp  MIDI.cpp  MIDIDEV.h  MasterVolumeCtrl.h  MidiCh.cpp  MidiManager.cpp  MultiDev_new.cpp  OPL3.cpp  OPL4.cpp  OPLL_new.cpp  OPL_new.cpp  OPM_new.cpp  OPN.cpp  OPN2_new.cpp  OPN_new.cpp  PSG_new.cpp  PatchManager.cpp  SCC.h  SSG.cpp  SoundDevImpl.cpp  Voice.cpp  VoiceBank.cpp  VoiceProcessor.cpp  VolumeUtils.cpp  YMDeltaT.h
docs/: CLAUDE.md  DESIGN.md  STATUS.md  chip-driver-architecture.md  chip-driver-migration.md  config-design.md  midi-implementation-status.md  patch-editor-connect-sequence.pu  patch-structure-design.md  plugin-fmengine.md  plugin-hwif.md  plugin-midi-pipe.md  plugin-midi.md  terminology.md  voice-data-design.md  voice-parameter-reference.md
docs/manuals/: FITOM_X_MIDI_Implementation_Chart.docx  FITOM_X_MIDI_Message_Reference_Manual.docx  hwpatch-reference.md  midi-implementation-chart.md  midi-message-reference.md  native-patch-reference.md  swpatch-reference.md
gui/bridge/: CMakeLists.txt  FITOMBridge.cpp  FITOMBridge.h
gui/mfc_shim/: CMakeLists.txt  FITOMBridge.cpp  FITOMBridge.h
legacy/: README.md
legacy/include/fitom/: Port.h
legacy/src/: EnvLFO.cpp  FITOM.cpp  FMS.cpp  MAx.cpp  MasterVolumeCtrl.cpp  OPK.cpp  OPL.cpp  OPLL.cpp  OPM.cpp  OPN.h  OPN2.cpp  SoundDev.cpp  SoundDev.h  Voice.h  volume_manager.h
plugin_sdk/: CMakeLists.txt
plugin_sdk/include/fitom/: IFmEnginePlugin.h  IHWPlugin.h  IMidiPlugin.h
tests/: CMakeLists.txt  test_audio_engine.cpp  test_config.cpp  test_plugin_loader.cpp  test_soundevice_freq.cpp
tools/voice_convert/: README.md  alsa_convert.py  opl2_merge.py  vma_convert.py
